Fixing high contrast bugs from issue #3102 (#3301)
* High contrast fixes: choiceGroup, persona, suggestions, commandbar example

* Increasing visibilty of focus border on choice group elements.

* picker selected item high contrast improvements

* Removing swatchColorPicker high contrast borders

* Primary button, dropdown, and colorPicker contrast adjustments

* Details check, message bar x button, progress, spinner, and toggle HC updates

* rush change

* Build fixes

* Fixing persona/activityItem border issues

* Changing achor button example to a non-primary button

* Using non-deprecated defaultButton

* changing compact border to palette color

* Removing high-contrast const definitions from all style ts files

--- a/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
+++ b/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
@@ -90,10 +90,6 @@ $ms-Persona-presenceBorder: 2px;
   height: $ms-Persona-size48;
   width: $ms-Persona-size48;
 
-  @include high-contrast {
-    border: 1px solid WindowText;
-  }
-
   .image {
     border: 0px;
   }
@@ -119,6 +115,13 @@ $ms-Persona-presenceBorder: 2px;
   font-weight: $ms-font-weight-regular;
   line-height: 46px;
   height: $ms-Persona-size48;
+
+  @include high-contrast {
+    border: 1px solid WindowText;
+    -ms-high-contrast-adjust: none;
+    // Using important to override all of the more specific initialsIsColor rules
+    background-color: Window !important;
+  }
 
   &.initialsIsLightBlue {
     background-color: $ms-color-initials-lightBlue;
@@ -335,10 +338,6 @@ $ms-Persona-presenceBorder: 2px;
 }
 
 .rootIsSize16 {
-  .imageArea {
-    box-shadow: 0 0 0 2px $ms-color-white;
-  }
-
   .imageArea,
   .image {
     height: $ms-Persona-size16;
